--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
     <string name="app_name">Photo App</string>
     <string name="title_photos">Photos</string>
     <string name="title_map">Map</string>
+    <string name="all_photos">All Photos</string>
+    <string name="album_name">Album Name</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="albums">Albums</string>
+    <string name="go_back">Go Back</string>
+    <string name="ok">Okay</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
